# aoc

./: Cargo.toml
2015/: Cargo.toml
2015/src/: day_1.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  main.rs
2016/src/: day_1.rs  main.rs
2022/: Cargo.toml
2022/src/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_2.rs  day_21.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  input.rs  main.rs
2022/test_input/: day_15.txt
2023/: Cargo.toml
2023/src/: day_1.rs  day_2.rs  day_3.rs
2024/: Cargo.toml
2024/src/: day_1.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs
