[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aoc_2024_1"
path = "src/day_1.rs"

[[bin]]
name = "aoc_2024_2"
path = "src/day_2.rs"

[[bin]]
name = "aoc_2024_3"
path = "src/day_3.rs"

[[bin]]
name = "aoc_2024_4"
path = "src/day_4.rs"

[[bin]]
name = "aoc_2024_5"
path = "src/day_5.rs"

[[bin]]
name = "aoc_2024_6"
path = "src/day_6.rs"

[[bin]]
name = "aoc_2024_7"
path = "src/day_7.rs"


[dependencies]
itertools = "0.13"
regex = "1.11"
